# data-engineer-assignment

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
